--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header__logo">
-            <img src="src/assets/img/icons/logo__header.png" alt="Logo do site">
+        <a href="index.html"> <img src="src/assets/img/icons/logo__header.png" alt="Logo do site"></a>
         </div>
         <nav class="header__menu menu">
             <ul class="menu__list">
@@ -40,6 +40,7 @@
             <div class="buttons">
                 <button class="login"><a href="login.html" class="link_button">Login</a></button>
                 <button class="cadastro"><a href="Cadastro.html" class="link_button">Cadastra-se</a></button>
+                <button class="cadastro"><a href="grad.html" class="link_button">grad</a></button>
 
             </div>
         </div>    
