--- a/login.html
+++ b/login.html
@@ -69,8 +69,9 @@
     </div>
 </div>
     </main>
-    <script src="src/js/login.js"></script>
     <script src="src/js/validacoes-login.js"></script>
+    <script src="src/js/globalScript.js"></script>
+    <script src="src/js/login.js"></script>
     <script src="src/js/loading.js"></script>
     <script src="src/js/pop-up.js"></script>
 <script>
